#71 better handling of version metadata